src/main/java/com/example/finalproject/_core/error/exception/SSRException403.java
package com.example.finalproject._core.error.exception;

public class SSRException403 extends RuntimeException{

    public SSRException403(String msg) {
        super(msg);
    }
}
